# numpythia

./: .gitignore  .travis.yml  MANIFEST.in  Makefile  README.rst  example.py  main.yml  pyproject.toml  setup.py
.ci/: azure-pipeline-build.yml  test-requirements.txt
.github/workflows/: main.yml  wheels.yml
numpythia/: __init__.py
numpythia/src/: _libnumpythia.cpp  _libnumpythia.pyx  analysis.pxd  delphes.pxd  delphes.pyx  generate.pyx  hepmc.pxd  numpythia.h  numpythia.pxd  pythia.pxd
numpythia/src/HepMC-2.06.09/include/HepMC/: .cvsignore  HepMCDefs.h  Makefile.am  Makefile.in  defs.h.in
numpythia/src/HepMC-2.06.09/src/: Units.cc  Units.cc.in
numpythia/src/hepmc3.0.0/examples/BasicExamples/: CMakeLists.txt  HepMC2_reader_example.cc  HepMC3_fileIO_example.cc  basic_tree.cc  hepevt_wrapper_example_fortran.f  hepevt_wrapper_example_main.cc
numpythia/src/hepmc3.0.0/examples/ConvertExample/: CMakeLists.txt  convert_example.cc  convert_example_env.sh.in
numpythia/src/hepmc3.0.0/examples/ConvertExample/include/: WriterHEPEVTZEUS.h  WriterRootTreeOPAL.h
numpythia/src/hepmc3.0.0/examples/ConvertExample/src/: WriterHEPEVTZEUS.cc  WriterRootTreeOPAL.cc
numpythia/src/hepmc3.0.0/examples/Pythia8Example/: CMakeLists.txt  pythia8_ee_to_Z_to_tautau.conf  pythia8_example.cc  pythia8_example_env.sh.in  pythia8_pp_minbias.conf
numpythia/src/hepmc3.0.0/include/HepMC/: Attribute.h  Config.h  Errors.h  GenEvent.h  GenParticle.h  GenVertex.h  HEPEVT_Wrapper.h  HepMC.h  HepMCDefs.h  IO_GenEvent.h  LHEFAttributes.h  Reader.h  ReaderAscii.h  ReaderAsciiHepMC2.h  SimpleVector.h  Writer.h  WriterAscii.h  WriterHEPEVT.h
numpythia/src/hepmc3.0.0/include/HepMC/Data/: GenEventData.h  GenParticleData.h  SmartPointer.icc
numpythia/src/hepmc3.0.0/include/HepMC/Search/: Filter.h  FilterAttribute.h  FilterBase.h  FilterList.h  FindParticles.h
numpythia/src/hepmc3.0.0/interfaces/pythia8/include/Pythia8/: Pythia8ToHepMC3.h
numpythia/src/hepmc3.0.0/interfaces/pythia8/src/: Pythia8ToHepMC3.cc
numpythia/src/hepmc3.0.0/src/: GenCrossSection.cc  GenHeavyIon.cc  GenParticle.cc  GenPdfInfo.cc  GenRunInfo.cc  HEPEVT_Wrapper.cc  Pythia8ToHepMC3.cc  ReaderAscii.cc  WriterAscii.cc  WriterHEPEVT.cc
numpythia/src/hepmc3.0.0/src/Search/: Filter.cc  FindParticles.cc
numpythia/testcmnd/: __init__.py  qcd.cmnd  w.cmnd
numpythia/testconfig/: __init__.py  pileup.cmnd  w.cmnd
tests/: test_import.py  test_readme.py
