[build-system]
requires = [
    "setuptools>=18.0",
    "wheel",
    "Cython>=0.29.13",
    "numpy==1.13.3; python_version=='2.7'",
    "numpy==1.13.3; python_version=='3.5'",
    "numpy==1.13.3; python_version=='3.6'",
    "numpy==1.14.5; python_version=='3.7'",
    "numpy==1.17.3; python_version>='3.8'",
]
